# oz_class_hyeongbin

./: chapter17_20.ipynb
Js_class_3/: calculator.css  calculator.html  day.html  mamber.html  member.css  member.js  multiplication.html  number.js  stop.html  stop.js  text.js
css_class/css_class/: diary.css  diary.html  member.css  member.html  profile.css  profile.html
css_class_2/css_class_2/: chat.html  footer.css  header.css  index.html  notice.css  snowman.css  snowman.html  welcome.css  welcome.html
css_class_3/: burger.css  burger.html  chat.css  chat.html  header.css  info.css  notice.css  oz.html  text.css
css_class_4/: banner.css  header.css  info.css
html.class/: blog.html  form.html  member.html  tag.html
js_class/: c_main.css  carousel.html  change.js  darkmode.html  member.css  member.html  quotient.js  user.html
js_class_2/: age.js  grade.html  monster.html  multiples.html  number.css  number.html  star.html  test.html  up.js
oz_django_test/: db.sqlite3  pyproject.toml
oz_django_test/config/: settings.py
oz_django_test/feeds/: views.py
